--- a/src/Components/ServicesPage/ServicesContact/servicesContact.css
+++ b/src/Components/ServicesPage/ServicesContact/servicesContact.css
@@ -12,11 +12,11 @@
 
 .ServicesContactBox{
     width: 626px;
-    color: white;
+    /* color: white; */
 }
 
 .ServicesContactBox h4{
-    color: #00B9C5;
+    /* color: #00B9C5; */
     letter-spacing: 3px;
     font-size: 13px;
 }
@@ -29,7 +29,7 @@
 }
 
 .ServicesContactBox p{
-    color: #FFFFFF99;
+    /* color: #FFFFFF99; */
     font-size: 16px;
     font-weight: 400;
     font-style: normal;
@@ -37,12 +37,12 @@
 }
 
 .ServicesContactBox button{
-    color: #FFFFFF;
+    /* color: #FFFFFF; */
     font-size: 16px;
     font-weight: 700;
     font-style: normal;
     line-height: 1.125em;
-    background-color: #DB3647;
+    /* background-color: #DB3647; */
     border-style: solid;
     border-width: 0px 0px 0px 0px;
     border-radius: 100px 100px 100px 100px;
