--- a/src/Components/AboutPage/AboutUsHedaer/AboutUsHeader.css
+++ b/src/Components/AboutPage/AboutUsHedaer/AboutUsHeader.css
@@ -32,7 +32,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    color: white;
+    /* color: white; */
     font-size: 20px;
     z-index: 1;
 }
@@ -46,7 +46,7 @@
 
 .AboutUsHeaderItemCont a {
     text-decoration: none;
-    color: white;
+    /* color: white; */
     font-weight: bold;
     font-size: 19px;
 }
