--- a/src/Components/ContactPage/ContactUs/ContactUs.css
+++ b/src/Components/ContactPage/ContactUs/ContactUs.css
@@ -10,14 +10,14 @@
     width: 1170px;
     display: flex;
     justify-content: space-between;
-    color: white;
+    /* color: white; */
     padding: 114px 0;
 }
 
 .ItemContactUsBg {
     width: 50%;
     height: 100%;
-    background-color: #333787;
+    /* background-color: #333787; */
     position: absolute;
     right: 0;
 }
@@ -27,7 +27,7 @@
 }
 
 .contact-us-item h4 {
-    color: #00B9C5;
+    /* color: #00B9C5; */
     letter-spacing: 3px;
     font-size: 13px;
 }
@@ -40,7 +40,7 @@
 }
 
 .contact-us-item p {
-    color: #FFFFFF99;
+    /* color: #FFFFFF99; */
     font-size: 16px;
     font-weight: 400;
     font-style: normal;
@@ -66,7 +66,7 @@
 
 .ContactUsLink a {
     margin-right: 15px;
-    color: white;
+    /* color: white; */
 }
 
 .ContactUsLink i {
@@ -89,7 +89,7 @@
 }
 
 .contact-us-box p {
-    color: #FFFFFF99;
+    /* color: #FFFFFF99; */
     font-size: 16px;
     font-weight: 400;
     font-style: normal;
@@ -103,13 +103,13 @@
 }
 
 .contact-us-box input {
-    background-color: #FFFFFF;
-    border-color: #E2E5F2;
+    /* background-color: #FFFFFF; */
+    /* border-color: #E2E5F2; */
     font-size: 16px;
     font-weight: 400;
     font-style: normal;
     line-height: 1.5em;
-    color: #64657D;
+    /* color: #64657D; */
     border-style: solid;
     border-width: 1px 1px 1px 1px;
     padding: 12px 16px 12px 16px;
@@ -121,12 +121,12 @@
 }
 
 .contact-us-box textarea {
-    border-color: #E2E5F2;
+    /* border-color: #E2E5F2; */
     font-size: 16px;
     font-weight: 400;
     font-style: normal;
     line-height: 1.5em;
-    color: #64657D;
+    /* color: #64657D; */
     border-style: solid;
     border-width: 1px 1px 1px 1px;
     padding: 12px 16px 12px 16px;
@@ -135,12 +135,12 @@
 }
 
 .contact-us-box button {
-    color: #FFFFFF;
+    /* color: #FFFFFF; */
     font-size: 16px;
     font-weight: 700;
     font-style: normal;
     line-height: 1.125em;
-    background-color: #DB3647;
+    /* background-color: #DB3647; */
     border-style: solid;
     border-width: 0px 0px 0px 0px;
     border-radius: 100px 100px 100px 100px;
