--- a/src/Components/HomePage/HomeContainer/home-container.css
+++ b/src/Components/HomePage/HomeContainer/home-container.css
@@ -25,7 +25,7 @@
 
 h1 {
     position: relative;
-    color: white;
+    /* color: white; */
     font-size: 66px;
     font-family: "Work Sans", serif;
 }
@@ -40,8 +40,8 @@ h1 {
     position: relative;
     padding: 15px 38px;
     border: 1px solid white;
-    background-color: rgba(0, 0, 0, 0);
-    color: white;
+    /* background-color: rgba(0, 0, 0, 0); */
+    /* color: white; */
     border-radius: 28px;
     font-weight: bold;
     font-size: 16px;
@@ -49,5 +49,5 @@ h1 {
 }
 
 p {
-    color: white;
+    /* color: white; */
 }
