--- a/src/Components/HomePage/Works/works.css
+++ b/src/Components/HomePage/Works/works.css
@@ -1,7 +1,7 @@
 .works-Items {
     width: 100%;
     padding-bottom: 110px;
-    background-color: #0e0f20;
+    /* background-color: #0e0f20; */
     display: flex;
     position: relative;
     justify-content: center;
@@ -36,7 +36,7 @@
 
 
 .works-ItemTittle h4, .boxWorksChildDiv h4 {
-    color: #00B9C5;
+    /* color: #00B9C5; */
     letter-spacing: 3px;
     font-size: 13px;
 }
@@ -51,22 +51,22 @@
 .WorksTitleBtn h2 {
     font-size: 54px;
     margin-top: 22px;
-    color: white;
+    /* color: white; */
 }
 
 .WorksTitleBtn button {
     border: none;
     border-radius: 100px;
     font-weight: bold;
-    color: white;
-    background-color: #DB3647;
+    /* color: white; */
+    /* background-color: #DB3647; */
     padding: 16px 32px;
     cursor: pointer;
     position: relative;
 }
 
 .works-ItemTittle p, .boxWorksChildDiv p {
-    color: #FFFFFF99;
+    /* color: #FFFFFF99; */
     font-size: 17px;
     margin: 22px 0;
     width: 600px;
@@ -83,7 +83,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    color: white;
+    /* color: white; */
     width: 585px;
     height: 421px;
     background-color: #333787;
@@ -92,7 +92,7 @@
 
 
 .WorksBoxBg {
-    background-color: #E2E5F2;
+    /* background-color: #E2E5F2; */
 }
 
 .boxImgWorks {
@@ -111,16 +111,16 @@
 
 .WorksBoxBg {
     h2 {
-        color: black;
+        /* color: black; */
     }
 
     p {
-        color: #64657D;;
+        /* color: #64657D;; */
     }
 
     button {
-        color: #333787 !important;
-        border-color: #333787 !important;
+        /* color: #333787 !important; */
+        /* border-color: #333787 !important; */
     }
 }
 
