--- a/src/Components/Layout/Header/header.css
+++ b/src/Components/Layout/Header/header.css
@@ -5,6 +5,8 @@
     flex-direction: column;
     background-image: linear-gradient(#0E0F20CC, #0E0F20CC),
     url('../../../img/bg.jpg');
+    /* background-color: rgba(0, 247, 255, 0.856); 
+    background-blend-mode: color; */
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 131px;
@@ -29,7 +31,7 @@ header {
 }
 
 header a {
-    color: white;
+    /* color: white; */
     text-decoration: none;
     list-style: none;
 }
@@ -68,12 +70,12 @@ header a {
 }
 
 .HeaderCategory ul li a:hover {
-    color: #00B9C5;
+    color: #00B9C5 !important;
 }
 
 .HeaderCategory button {
     position: relative;
-    background-color: #DB3647;
+    /* background-color: #DB3647; */
     border: none;
     padding: 15px 37px;
     border-radius: 28px;
@@ -142,6 +144,62 @@ header a {
 .active {
     color: #00B9C5 !important;
 }
+
+
+
+.darkLightModesMain {
+    width: 100px;
+    height: 50px;
+    background-color: #00B9C5;
+    border-radius: 50%;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.lightMode {
+    width: 50px;
+    height: 50px;
+    border-top-right-radius: 50%;
+    border-bottom-right-radius: 50%;
+    cursor: pointer;
+    /* border-radius: 50%; */
+    background-color: rgb(255, 255, 255);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.lightMode > i {
+    font-size: 30px;
+    color: rgb(0, 0, 0);
+}
+
+
+.darkMode {
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    border-top-left-radius: 50%;
+    border-bottom-left-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: rgb(0, 0, 0);
+}
+
+.darkMode > i {
+    font-size: 30px;
+    color: rgb(255, 255, 255);
+}
+
+
+
+
+
+
+
+
+
 
 
 
