--- a/src/Components/Layout/NewsLetter/news-letter.css
+++ b/src/Components/Layout/NewsLetter/news-letter.css
@@ -3,7 +3,7 @@
     width: 100%;
     display: flex;
     justify-content: center;
-    background-color: #0e0f20;
+    /* background-color: #0e0f20; */
 
     .newsLetterCont {
         display: flex;
@@ -13,7 +13,7 @@
         top: -183px;
         width: 1170px;
         height: 283px;
-        background-color: #E2E5F2;
+        /* background-color: #E2E5F2; */
         z-index: 1;
     }
 
@@ -36,7 +36,7 @@
     }
 
     .newsLetterCont h4 {
-        color: rgb(0, 185, 197);
+        /* color: rgb(0, 185, 197); */
         letter-spacing: 3px;
         font-size: 13px;
     }
@@ -45,7 +45,7 @@
         position: relative;
         font-size: 54px;
         margin-top: 15px;
-        color: #0E0F20;
+        /* color: #0E0F20; */
     }
 
     .newsLetterContChildDiv {
@@ -60,12 +60,12 @@
 
     .newsLetterCont h3 {
         font-size: 31px;
-        color: #333787;
+        /* color: #333787; */
         font-weight: bold;
     }
 
     .newsLetterCont p {
-        color: #64657D;
+        /* color: #64657D; */
         font-size: 17px;
         margin: 22px 0;
     }
@@ -91,8 +91,8 @@
         position: relative;
         border: none;
         border-radius: 100px;
-        background-color: #DB3647;
-        color: white;
+        /* background-color: #DB3647; */
+        /* color: white; */
         font-weight: bold;
         padding: 11px 32px;
         cursor: pointer;
