--- a/src/Components/TeamPage/TeamStaff/TeamStaff.css
+++ b/src/Components/TeamPage/TeamStaff/TeamStaff.css
@@ -16,13 +16,13 @@
 
   .staff-team {
     font-size: 13px;
-    color: #00B9C5;
+    /* color: #00B9C5; */
     letter-spacing: 3px;
   }
   
   .team-title {
     font-size: 54px;
-    color: white;
+    /* color: white; */
     margin-bottom: 10px;
   }
   
@@ -30,7 +30,7 @@
     font-size: 16px;
     font-family: sans-serif;
     margin-bottom: 30px;
-    color: #666;
+    /* color: #666; */
   }
   
   .staff-members {
@@ -41,7 +41,7 @@
   
   .staff-member {
     position: relative;
-    background: #fff;
+    /* background: #fff; */
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     text-align: start;
@@ -64,14 +64,14 @@
   .staff-name {
     font-size: 16px;
     font-family: sans-serif;
-    color: #0E0F20;
+    /* color: #0E0F20; */
     margin: 10px 0 5px 20px;
   }
   
   .staff-position {
     padding-left: 20px;
     font-size: 12px;
-    color: #64657D;
+    /* color: #64657D; */
     margin-bottom: 15px;
   }
   
