--- a/src/Components/BlogPage/BlogTitleContainer/BlogTitleContainer.css
+++ b/src/Components/BlogPage/BlogTitleContainer/BlogTitleContainer.css
@@ -11,18 +11,18 @@
     position: relative;
     font-size: 54px;
     font-family: sans-serif;
-    /* color: white; */
+    color: white;
 }
 
 .blog-title-div > h4 {
-    /* color: #00B9C5; */
+    color: #00B9C5;
     letter-spacing: 3px;
     font-size: 13px;
     margin-bottom: 5px;
 }
 
 .blog-title-div p {
-    /* color: #FFFFFF99; */
+    color: #FFFFFF99;
     font-size: 17px;
 }
 
@@ -55,11 +55,11 @@
     width: 540px;
     display: flex;
     flex-direction: column;
-    /* color: white; */
+    color: white;
 }
 
 .blog-us-text h4 {
-    /* color: #00B9C5; */
+    color: #00B9C5;
     letter-spacing: 3px;
     font-size: 13px;
     margin-bottom: 5px;
@@ -73,7 +73,7 @@
 }
 
 .blog-us-text p {
-    /* color: #FFFFFF99; */
+    color: #FFFFFF99;
     font-size: 17px;
     margin-bottom: 30px;
 }
@@ -81,8 +81,8 @@
 .blog-us-text button {
     position: relative;
     font-weight: bolder;
-    /* background-color: rgba(14, 15, 32, 0); */
-    /* color: white; */
+    background-color: rgba(14, 15, 32, 0);
+    color: white;
     border: 1px solid white;
     padding: 16px 32px;
     border-radius: 100px;
