--- a/src/Components/ContactPage/ContactHeader/ContactHeader.css
+++ b/src/Components/ContactPage/ContactHeader/ContactHeader.css
@@ -31,7 +31,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    /* color: white; */
+    color: white;
     font-size: 20px;
     z-index: 1;
 }
@@ -45,7 +45,7 @@
 
 .ContactHeaderItemCont a {
     text-decoration: none;
-    /* color: white; */
+    color: white;
     font-weight: bold;
     font-size: 19px;
 }
