--- a/src/Components/HomePage/Service/service.css
+++ b/src/Components/HomePage/Service/service.css
@@ -4,7 +4,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    /* background-color: #0E0F20; */
+    background-color: #0E0F20;
     position: relative;
     padding-bottom: 222px;
 }
@@ -25,7 +25,7 @@
 .ServicesTitle h2 {
     font-size: 54px;
     margin-top: 22px;
-    /* color: white; */
+    color: white;
 }
 
 .ServicesTitle p {
