--- a/src/Components/Layout/Footer/footer.css
+++ b/src/Components/Layout/Footer/footer.css
@@ -2,7 +2,7 @@ footer {
     position: relative !important;
     width: 100%;
     padding: 30px 0;
-    /* background-color: #333787; */
+    background-color: #333787;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -12,7 +12,7 @@ footer {
         width: 1170px;
         display: flex;
         justify-content: space-between;
-        /* color: white; */
+        color: white;
         border-bottom: 1px solid #ffffff47;
         padding: 125px 0 31px;
     }
@@ -39,7 +39,7 @@ footer {
     }
 
     .footerBox p {
-        /* color: #FFFFFF; */
+        color: #FFFFFF;
         font-size: 17px;
         margin: 22px 0;
         transition: .3s;
@@ -51,7 +51,7 @@ footer {
     }
 
     .footerBox a p:hover {
-        /* color: #00B9C5; */
+        color: #00B9C5;
     }
 
     .footerCardBox, .footerCardBox2 {
@@ -73,7 +73,7 @@ footer {
     }
 
     .footerCardBox2 a {
-        /* color: white !important; */
+        color: white !important;
         text-decoration: none;
         display: flex;
         align-items: center;
@@ -95,10 +95,11 @@ footer {
     .footerItem2 p {
         font-size: 16px;
         transition: .3s;
+        color: white;
     }
 
     .footerItem2 a p:hover {
-        /* color: #00B9C5; */
+        color: #00B9C5;
     }
 
     .footerItem2 a {
