--- a/src/Components/Layout/Header/header.css
+++ b/src/Components/Layout/Header/header.css
@@ -3,10 +3,8 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    background-image: linear-gradient(#0E0F20CC, #0E0F20CC),
-    url('../../../img/bg.jpg');
-    /* background-color: rgba(0, 247, 255, 0.856); 
-    background-blend-mode: color; */
+    /* background-image: linear-gradient(#0E0F20CC, #0E0F20CC),
+    url('../../../img/bg.jpg'); */
     background-repeat: no-repeat;
     background-size: cover;
     padding-top: 131px;
@@ -20,7 +18,7 @@ header {
     align-items: center;
     padding: 30px 0;
     position: absolute;
-    z-index: 1;
+    /* z-index: 1; */
 }
 
 .header-container {
@@ -31,7 +29,7 @@ header {
 }
 
 header a {
-    /* color: white; */
+    color: white;
     text-decoration: none;
     list-style: none;
 }
@@ -75,13 +73,17 @@ header a {
 
 .HeaderCategory button {
     position: relative;
-    /* background-color: #DB3647; */
-    border: none;
+    background-color: #ffffff00;
+    border: 1px solid #00B9C5;
     padding: 15px 37px;
     border-radius: 28px;
     margin-left: 40px;
     cursor: pointer;
     animation-name: example;
+}
+
+.HeaderCategory button > a {
+    color: #00B9C5;
 }
 
 .HamburgerItem {
@@ -199,6 +201,38 @@ header a {
 
 
 
+.dropdown-content {
+    display: none !important;
+    position: absolute;
+    text-align: start !important;
+    background: linear-gradient(to bottom, #ffffff00, #41b6da17);
+    z-index: 1;
+    gap: 10px;
+    padding: 25px 20px 20px 10px;
+    width: 100px;
+  }
+
+  .dropdown-content li {
+    margin: 0 !important;
+  }
+
+  .dropdown:hover .dropdown-content {
+    display: flex !important;
+    flex-direction: column;
+    justify-content: start;
+    animation: slideDown 0.3s ease;
+  }
+  
+  @keyframes slideDown {
+    from {
+      opacity: 0;
+      transform: translateY(20px);
+    }
+    to {
+      opacity: 1;
+      transform: translateY(0);
+    }
+  }
 
 
 
