--- a/src/Components/BlogPage/BlogCards/BlogCards.css
+++ b/src/Components/BlogPage/BlogCards/BlogCards.css
@@ -1,81 +1,78 @@
 .staff-grid-blog {
     text-align: center;
-    padding: 20px;
-    width: 1240px;
+    padding: 20px 0;
+    width: 1170px;
     display: flex;
     flex-direction: column;
     align-items: start;
-    margin-top: 50px;
-    margin-bottom: 250px;
-    margin-left: auto;
-    margin-right: auto;
-  }
+    margin: 50px auto 250px;
+}
 
-  .staff-title-blog > h2 {
+.staff-title-blog > h2 {
     color: white;
     margin-left: 13px;
-  }
+}
 
-  .staff-team {
+.staff-team {
     font-size: 13px;
     color: #00B9C5;
     letter-spacing: 3px;
-  }
-  
-  .team-title {
+}
+
+.team-title {
     font-size: 54px;
     color: white;
     margin-bottom: 10px;
-  }
-  
-  .team-description {
+}
+
+.team-description {
     font-size: 16px;
     font-family: sans-serif;
     margin-bottom: 30px;
     color: #666;
-  }
-  
-  .staff-members {
+}
+
+.staff-members {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-  }
-  
-  .staff-member-blog {
-    width: 370px;
-    height: 350px;
+    justify-content: space-between;
+}
+
+.staff-member-blog {
+    width: 346px;
+    height: 342px;
     position: relative;
     background: #fff;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     overflow: hidden;
     text-align: start;
-    margin: 15px;
+    margin: 15px 0;
     box-sizing: border-box;
-  }
-  
-  .staff-photo-blog {
-    width: 509px; 
-    height: 261px; 
-  }
+}
 
-  .img-line {
+.staff-photo-blog {
+    width: 509px;
+    height: 261px;
+}
+
+.img-line {
     position: absolute;
     bottom: 62px;
     right: 0px;
     z-index: 1000;
-  }
-  
-  .staff-name {
+}
+
+.staff-name {
     font-size: 16px;
     font-family: sans-serif;
     color: #0E0F20;
     margin: 10px 0 5px 20px;
-  }
-  
-  .staff-position {
+}
+
+.staff-position {
     padding-left: 20px;
     font-size: 12px;
     color: #64657D;
     margin-bottom: 15px;
-  }
+}
   
