--- a/src/Components/Layout/Header/header.css
+++ b/src/Components/Layout/Header/header.css
@@ -235,5 +235,92 @@ header a {
   }
 
 
+  /* LanguageSelector.css */
+  .language-selector {
+    position: relative;
+    display: inline-block;
+  }
+  
+  .dropbtn {
+    background: #18596a;
+    color: #fff;
+    border: none;
+    width: 70px;
+    height: 50px;
+    border-radius: 9px !important;
+    padding: 12px 20px !important;
+    font-size: 16px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    transition: background 0.3s ease, box-shadow 0.3s ease;
+  }
+
+  .dropbtn > img {
+    width: 100%;
+    /* height: 90%; */
+  }
+  
+  .dropbtn:hover {
+    background: #3538d642;
+    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
+  }
+  
+  .language-name {
+    font-weight: 500;
+  }
+  
+  .dropdown-conten {
+    display: none;
+    position: absolute;
+    background: #3386cf28;
+    border-radius: 8px;
+    min-width: 150px;
+    box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease, visibility 0.3s ease;
+    z-index: 1;
+    top: 110%;
+    left: 0;
+  }
+  
+  .dropdown-conten.show {
+    display: block;
+    opacity: 1;
+    visibility: visible;
+  }
+  
+  .dropdown-item {
+    padding: 12px 20px;
+    color: #fff;
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+  }
+  
+  .dropdown-item:hover {
+    background: #3424c733;
+  }
+  
+  .dropdown-item.disabled {
+    opacity: 0.5;
+    pointer-events: none;
+    cursor: default;
+  }
+  
+  .dropdown-item .language-name {
+    font-weight: 400;
+  }
+  
+  .dropdown-item .icon {
+    width: 24px;
+    height: 24px;
+  }
+  
 
 
