--- a/src/Components/Layout/Header/header.css
+++ b/src/Components/Layout/Header/header.css
@@ -248,14 +248,15 @@ header a {
     cursor: pointer;
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     transition: background 0.3s ease, box-shadow 0.3s ease;
 }
 
 .dropbtn > img {
-    width: 100%;
-    /* height: 90%; */
+    /* width: 100%; */
+    height: 120%;
 }
 
 .dropbtn:hover {
